--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "form-data": "^4.0.2",
+    "fs": "^0.0.1-security",
     "joi": "^17.13.3",
     "mongoose": "^8.6.0",
+    "multer": "^2.0.0",
     "nodemon": "^3.1.4"
   }
 }
